# Travelmaster

./: .gitignore  README.md  hello.py  package-lock.json  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_new.txt  template.py
_archive/examples_old/: test_flight_tool.py  test_flight_tool_minimal.py  test_pagination_metadata.py  test_places_tool_minimal.py
_archive/langgraph_agents_venv/: pyvenv.cfg
_archive/langgraph_agents_venv/Scripts/: activate  activate.bat
_archive/mock_agent_old/: data.py
apps/backend/: agent_server.py
apps/backend/adapters/: interceptors.py
apps/backend/agent_in_update/: .env.example  Dockerfile  README.md  lambda_handler.py  requirements.txt  samconfig.toml  template.yaml
apps/backend/clients/: multi_client.py
apps/backend/core/: amadeus_client.py  amadeus_iata.py  config.py  iata_loader.py
apps/backend/data/: comprehensive_trip_output.txt
apps/backend/mcp_server/: server.py
apps/backend/mlops/: .samignore  Dockerfile  lambda_handler.py  requirements.txt  samconfig.toml  template.yaml
apps/backend/mlops_old/: README.md  __init__.py
apps/backend/shared/: constants.py
apps/backend/tools/: __init__.py
apps/frontend/: README.md  front_evolution.md  frontend_streamlit_old.py  index.html  package-lock.json  package.json  tailwind.config.js
apps/frontend/src/: App.tsx  (+2 more)
backend/neo4j_database/: database_connection.py
backend/travel_agent/: config.py  schemas.py
data/cache/: place_knowledge.db
examples/: schema_usage.py  test_budget_tool.py  test_budget_tool_minimal.py  test_flight_enhancements.py  test_hotel_fuzzy_matching.py  test_hotel_pagination_metadata.py  test_hotel_tool.py  test_hotel_tool_minimal.py  test_places_fuzzy_matching.py  test_places_tool.py
mock_agent/: main.py
readme_plans/tarang/: INSTRUCTIONS.md  Responsibility.md  Tarang_Kishor_Masterplan.md  comprehensive_travel_plan.md  comprehensive_travel_plan.txt
readme_plans/venky/: TravelGuru_Execution_Guide.md  TravelGuru_SaaS_Masterplan.md  host_agent_&_remote_agent_plan.md
tests/: test_composer_output.py  test_comprehensive_trip_output.py  test_full_budget.py  test_full_flight.py  test_full_hotel.py  test_full_places.py  test_full_trip.py  test_full_weather.py  test_schemas.py
tests/outputs/: comprehensive_trip_plan_20260121_182117.md
travelguru-v5/: __init__.py  docker-compose.yml
travelguru-v5/backend/: CHECK_GROQ.PY  requirements.txt
(+420 files in other folders)
