[project]
name = "travelguru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-groq>=1.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.5",
    "mcp>=1.25.0",
    "neo4j~=5.28.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
]
