[project]
name = "travelguru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.11.2",
    "dvc>=3.65.0",
    "fastapi>=0.128.0",
    "google-cloud-aiplatform>=1.132.0",
    "google-genai>=1.56.0",
    "langchain-google-genai>=4.1.2",
    "langchain-groq>=1.1.1",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.5",
    "mcp>=1.25.0",
    "mlflow>=3.8.1",
    "neo4j~=5.28.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "uvicorn>=0.40.0",
]
