[project]
name = "travelguru"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk>=0.3.22",
    "amadeus>=11.0.0",
    "browser-use>=0.11.2",
    "click>=8.3.1",
    "crewai>=0.134.0",
    "deepagents>=0.3.1",
    "dvc>=3.65.0",
    "fastapi>=0.128.0",
    "google-adk>=1.18.0",
    "google-cloud-aiplatform>=1.132.0",
    "google-genai>=1.56.0",
    "google-generativeai>=0.8.6",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "joblib>=1.4.0",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=4.1.2",
    "langchain-google-vertexai>=3.2.1",
    "langchain-graph-retriever>=0.8.0",
    "langchain-groq>=1.1.1",
    "langchain-huggingface>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-neo4j>=0.6.0",
    "langchain-ollama>=1.0.1",
    "langchain-unstructured>=1.0.1",
    "langgraph>=1.0.5",
    "mcp>=1.25.0",
    "mlflow>=3.8.1",
    "neo4j~=5.28.0",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.0",
    "openai>=1.30.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.8.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.1",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.5.0",
    "sqlalchemy>=2.0.30",
    "streamlit>=1.35.0",
    "tavily-python>=0.7.17",
    "uvicorn>=0.40.0",
]
